# bible-applied

./: .gitignore  README.md
.github/workflows/: release.yml
app/: package.json  pnpm-lock.yaml  tailwind.config.js
app/src/: App.tsx  main.tsx
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/migrations/: 001_initial.sql
app/src-tauri/src/: commands.rs  db.rs  lib.rs  llm.rs  main.rs  models.rs  seed.rs
app/src/api/: ai.ts  bible.ts  settings.ts
app/src/components/bible/: VerseCard.tsx
app/src/components/layout/: Header.tsx  Layout.tsx  Sidebar.tsx
app/src/components/topics/: TopicCard.tsx
app/src/components/ui/: Button.tsx  Card.tsx  Input.tsx  index.ts
app/src/lib/: types.ts  utils.ts
app/src/pages/: Bible.tsx  Home.tsx  Journal.tsx  Search.tsx  Settings.tsx  Topics.tsx  VerseDetail.tsx  index.ts
app/src/stores/: bibleStore.ts  settingsStore.ts  userStore.ts
app/src/styles/: globals.css
docs/: DATABASE_SCHEMA.md  LLM_INTEGRATION.md  PRODUCT_REQUIREMENTS.md  README.md  TECHNICAL_ARCHITECTURE.md  UI_UX_GUIDELINES.md
